fix: 당첨 번호 검증 기능 수정